# actrion-server-and-clien

UAV/install/: local_setup.sh  setup.ps1  setup.sh
UAV/install/uav_control/lib/uav_control/: flight_action_server
UAV/install/uav_control/share/uav_control/: local_setup.sh  package.bash  package.ps1  package.sh
UAV/install/uav_control_interfaces/share/uav_control_interfaces/: package.dsv  package.ps1  package.sh
UAV/log/: latest_build
UAV/uav_interface_ws/install/: local_setup.sh
UAV/uav_interface_ws/src/uav_control_interfaces/: CMakeLists.txt
UAV/uav_interface_ws/src/uav_control_interfaces/action/: .a.swp  Flight.action
UAV/uav_ws/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
UAV/uav_ws/src/uav_control/src/: flight_action_server.cpp
UGV/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
UGV/install/uav_control_interfaces/share/uav_control_interfaces/: local_setup.sh  package.sh  package.zsh
UGV/install/ugv_control/lib/ugv_control/: flight_action_client
UGV/log/: latest_build
UGV/uav_interface_ws/install/: setup.sh
UGV/uav_interface_ws/log/: latest_build
UGV/ugv_ws/install/: local_setup.sh  setup.ps1
UGV/ugv_ws/log/: latest_build
uav_interface_ws/src/uav_control_interfaces/: CMakeLists.txt
uav_ws/install/: setup.ps1
uav_ws/log/: latest_build
uav_ws/src/uav_control/: CMakeLists.txt
uav_ws/src/uav_control/src/: flight_action_server.cpp
ugv_ws/install/: setup.bash  setup.sh  setup.zsh
ugv_ws/src/ugv_control/: CMakeLists.txt  package.xml
ugv_ws/src/ugv_control/src/: flight_action_client.cpp
(+41 files in other folders)
