<package format="2">
  <name>ugv_control</name>
  <version>0.0.1</version>
  <description>UGV control package</description>

  <maintainer email="momo@example.com">Momo</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>uav_control_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

